# ros2-course-humble

./: .gitignore  README.md  start_ros_humble.bash
.devcontainer/: devcontainer - linux.json  devcontainer - windows.json  devcontainer.json
docker/: Dockerfile
src/cboost/bffp_gazebo/: CMakeLists.txt  package.xml
src/cboost/bffp_gazebo/config/: gui.config  ros_gz_bridge.yaml
src/cboost/bffp_gazebo/hooks/: bffp_gazebo.dsv.in  bffp_gazebo.sh.in
src/cboost/bffp_gazebo/launch/: factory_moveit_full.launch.py  gz_world.launch.py
src/cboost/bffp_gazebo/resources/: world.sdf
src/cboost/bffp_gazebo/resources/box_large/: model.config  model.sdf
src/cboost/bffp_gazebo/resources/box_large/meshes/: box_large.dae
src/cboost/bffp_gazebo/resources/box_medium/: model.config  model.sdf
src/cboost/bffp_gazebo/resources/box_medium/meshes/: box_medium.dae
src/cboost/bffp_gazebo/resources/box_small/: model.config  model.sdf
src/cboost/bffp_gazebo/resources/box_small/meshes/: box_small.dae
src/cboost/bffp_gazebo/resources/box_tunnel/meshes/: box_tunnel.stl
src/cboost/bffp_gazebo/resources/conveyor_belt/: model.config  model.sdf
src/cboost/bffp_gazebo/resources/conveyor_belt/meshes/: conveyor_belt.dae
src/cboost/bffp_gazebo/resources/conveyor_gz/: model.config  model.sdf
src/cboost/bffp_gazebo/resources/ir_sensor/: model.config  model.sdf
src/cboost/cboost_macros/: CMakeLists.txt  package.xml
src/cboost/cboost_macros/xacro/: combine_srdf.srdf  default_transmission.xacro  gz_sim.urdf.xacro  robot_description.xacro  ros2_control.xacro
src/motoman/motoman_hc10dtp/hc10dtp/: CMakeLists.txt  package.xml
src/motoman/motoman_hc10dtp/hc10dtp/config/: force_torque.plotjuggler.xml  planning_scene_monitor.yaml  ros2_controllers.yaml
src/motoman/motoman_hc10dtp/hc10dtp/launch/: description_rviz.launch.py  moveit_full.launch.py
src/motoman/motoman_hc10dtp/hc10dtp/urdf/: description.urdf.xacro  hc10dtp.urdf.xacro
src/motoman/motoman_hc10dtp/hc10dtp_gzsim/: CMakeLists.txt  package.xml
src/motoman/motoman_hc10dtp/hc10dtp_gzsim/config/: motoman_hc10dtp.urdf.xacro  ros_gz_bridge.yaml
src/motoman/motoman_hc10dtp/hc10dtp_gzsim/worlds/: empty.sdf
src/motoman/motoman_hc10dtp/hc10dtp_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/motoman/motoman_hc10dtp/hc10dtp_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  motion_planning.yaml  motoman_hc10dtp.srdf  motoman_hc10dtp.urdf.xacro  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  servo.rviz  servo_config.yaml
src/motoman/motoman_hc10dtp/hc10dtp_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/motoman/motoman_hc10dtp/motoman_hc10dtp/: CMakeLists.txt  package.xml
src/motoman/motoman_hc10dtp/motoman_hc10dtp/launch/: gz_moveit_full.launch.py  mock_moveit_full.launch.py
src/motoman/motoman_resources/: CMakeLists.txt  package.xml
src/pal_maps/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/pal_maps/maps/hospital/: map.pgm  map.yaml
src/pal_maps/maps/hospital_with_aruco/: map.pgm  map.yaml
src/pal_maps/maps/our_map/: README.md  map.pgm  map.yaml
src/pal_maps/maps/pal_office_7th_floor/: map.yaml
src/pal_maps/maps/small_house/: map.yaml
src/pal_maps/maps/small_office/: map.yaml
src/pal_maps/maps/willow_garage/: map.pgm  map.yaml
