<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hc10dtp_gzsim</name>
  <version>0.0.3</version>
  <description>ROS2 package for Yaskawa's HC10DTP model</description>
  <maintainer email="patrick.verwimp@cboost.nl">Patrick Verwimp</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>gz_ros2_control</depend>
  <depend>ros_gz_sim</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>