<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motoman_hc10dtp</name>
  <version>0.0.3</version>
  <description>Bringup package of Motoman HC10DTP</description>
  <maintainer email="patrick.verwimp@cboost.nl">Patrick Verwimp</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>motoman_resources</depend>
  <depend>hc10dtp</depend>
  <depend>hc10dtp_moveit_config</depend>
  <depend>hc10dtp_gzsim</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>